[package]
name = "lyra-route-lab"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
bincode = "1.3"
bs58 = "0.5"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-keypair = "2.2"
solana-pubkey = "2.2"
solana-signer = "2.2"
solana-transaction = { version = "2.2", features = ["bincode"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
